--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -382,6 +382,11 @@
                                Margin="0,15,5,5"
                                TextWrapping="WrapWholeWords">
                         <Run Text="版本号：1.0.1016"/><LineBreak/>
+                        <LineBreak/>
+                        <Run Text="待解决的问题：" FontSize="14"/><LineBreak/>
+                        <Run Text="1）所有评论加载存在问题" FontSize="12"/><LineBreak/>
+                        <Run Text="2）YouKu视频暂时无法支持" FontSize="12"/><LineBreak/>
+                        <LineBreak/>
                         <Run Text="联系作者"/><LineBreak/>
                         <Run Text="WeChat：miao17game"/><LineBreak/>
                         <Run Text="QQ：245396954"/><LineBreak/>
